# POGOH_bike_share_growth_analysis

./: README.md  pyproject.toml
data/: CONTEXT.MD
data/raw/: STATION_EXPORT-1222.csv  changed-capacities.csv  old-stations.csv
