[project]
name = "pogoh-bike-share-growth-analysis"
version = "0.1.0"
description = "This is a Decision Support Project focused on operational analysis and growth optimization for Pittsburgh's bike share system."
authors = [
    { name = "Phillip Barton", email = "soylentgreen70@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []
